--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lib-cjs/index.js",
   "module": "lib-esm/index.js",
   "types": "lib-cjs/index",
@@ -21,14 +21,12 @@
     "build": "yarn build:clean && yarn build:cjs && yarn build:esm",
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc",
-    "build:esm":
-      "tsc --module es2015 --moduleResolution node --outDir ./lib-esm",
+    "build:esm": "tsc --module es2015 --moduleResolution node --outDir ./lib-esm",
     "test": "yarn test:build:clean && mocha --colors",
     "testjs": "yarn test:build && mocha \"lib-test/**/*.js\"",
     "test:build": "cd test && tsc",
     "test:build:clean": "rm -rf test/lib",
-    "test:build:parser":
-      "mkdirp test/lib/src/property/property-filter-ast/pegjs/ && cp src/property/property-filter-ast/pegjs/generated-parser.* test/lib/src/property/property-filter-ast/pegjs/",
+    "test:build:parser": "mkdirp test/lib/src/property/property-filter-ast/pegjs/ && cp src/property/property-filter-ast/pegjs/generated-parser.* test/lib/src/property/property-filter-ast/pegjs/",
     "coverage": "rm -rf coverage .nyc_output && nyc yarn test",
     "publish-npm": "yarn test && yarn build && yarn publish"
   }
