--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/chai": "^4.1.3",
     "@types/mocha": "^5.2.1",
     "@types/node": "^10.3.0",
+    "@types/tape": "^4.2.32",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
-    "ts-node": "^6.0.5",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.1",
+    "ts-node": "^6.1.1",
     "typescript": "^2.9.1"
   },
   "scripts": {
@@ -26,7 +29,7 @@
     "testjs": "yarn test:build && mocha \"lib-test/**/*.js\"",
     "test:build": "cd test && tsc",
     "test:build:clean": "rm -rf test/lib",
-    "test:build:parser": "mkdirp test/lib/src/property/property-filter-ast/pegjs/ && cp src/property/property-filter-ast/pegjs/generated-parser.* test/lib/src/property/property-filter-ast/pegjs/",
+    "test2": "tape --require ts-node/register \"test2/**/*.ts\" | tap-spec",
     "coverage": "rm -rf coverage .nyc_output && nyc yarn test",
     "publish-npm": "yarn test && yarn build && yarn publish"
   }
