--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "./tsconfig-base.json",
-  "include": ["src/**/*"],
+  "extends": "../tsconfig-base.json",
+  "include": ["**/*"],
   "compilerOptions": {
     // Output options
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib-cjs",
-    "rootDir": "./src",
+    "outDir": "../lib-cjs",
+    "rootDir": "./",
     "sourceMap": true,
     // Lib options
     "lib": ["es5", "es2015", "dom"],
