--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "^10.3.0",
     "@types/tape": "^4.2.32",
+    "rimraf": "^2.6.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1",
     "ts-node": "^6.1.1",
