--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -10,8 +10,6 @@
     "rootDir": "./",
     "sourceMap": true,
     // Lib options
-    "lib": ["es5", "es2015", "dom"],
-    // If we do not specify this we get clashes in global types
-    "types": ["node", "mocha"]
+    "lib": ["es5", "es2015", "dom"]
   }
 }
