--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lib-cjs/index.js",
   "module": "lib-esm/index.js",
   "types": "lib-cjs/index",
@@ -9,27 +9,30 @@
   "repository": "https://github.com/dividab/uom",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^4.1.3",
-    "@types/mocha": "^5.2.1",
     "@types/node": "^10.3.0",
-    "chai": "^4.1.2",
-    "mocha": "^5.2.0",
-    "ts-node": "^6.0.5",
+    "@types/tape": "^4.2.32",
+    "nyc": "^12.0.2",
+    "rimraf": "^2.6.2",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.1",
+    "ts-node": "^6.1.1",
+    "tslint": "^5.10.0",
+    "tslint-immutable": "^4.6.0",
     "typescript": "^2.9.1"
   },
   "scripts": {
+    "lint": "tslint --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
     "build": "yarn build:clean && yarn build:cjs && yarn build:esm",
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
-    "build:cjs": "tsc",
-    "build:esm":
-      "tsc --module es2015 --moduleResolution node --outDir ./lib-esm",
-    "test": "yarn test:build:clean && mocha --colors",
-    "testjs": "yarn test:build && mocha \"lib-test/**/*.js\"",
-    "test:build": "cd test && tsc",
+    "build:cjs": "tsc -p src",
+    "build:esm": "tsc -p src --module es2015 --moduleResolution node --outDir ./lib-esm",
+    "test": "tape --require ts-node/register \"test/**/*.ts\" | tap-spec",
+    "testjs": "yarn test:build && tape \"lib-test/**/*.js\"",
+    "test:build": "tsc -p test",
     "test:build:clean": "rm -rf test/lib",
-    "test:build:parser":
-      "mkdirp test/lib/src/property/property-filter-ast/pegjs/ && cp src/property/property-filter-ast/pegjs/generated-parser.* test/lib/src/property/property-filter-ast/pegjs/",
-    "coverage": "rm -rf coverage .nyc_output && nyc yarn test",
+    "verify": "yarn lint && yarn build && yarn coverage",
+    "coverage": "rimraf coverage .nyc_output && nyc yarn test",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "publish-npm": "yarn test && yarn build && yarn publish"
   }
 }
