--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/node": "^10.3.0",
     "@types/tape": "^4.2.32",
+    "coveralls": "^3.0.1",
     "nyc": "^12.0.2",
     "rimraf": "^2.6.2",
     "tap-spec": "^5.0.0",
