--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/tape": "^4.2.32",
     "coveralls": "^3.0.1",
     "husky": "^0.14.3",
+    "jsdoc-to-markdown": "^4.0.1",
     "lint-staged": "^7.2.0",
     "nyc": "^12.0.2",
     "prettier": "^1.13.5",
@@ -25,8 +26,8 @@
     "typescript": "^2.9.1"
   },
   "scripts": {
-    "lint": "tslint --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
-    "build": "yarn build:clean && yarn build:cjs && yarn build:esm",
+    "lint": "tslint -p src --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
+    "build": "yarn build:clean && yarn build:cjs && yarn build:esm && yarn gen-docs",
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc -p src",
     "build:esm": "tsc -p src --module es2015 --moduleResolution node --outDir ./lib-esm",
@@ -38,6 +39,7 @@
     "precommit": "lint-staged",
     "coverage": "rimraf coverage .nyc_output && nyc yarn test",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "gen-docs": "jsdoc2md lib-esm/amount.js >docs/amount.md",
     "publish-npm": "yarn test && yarn build && yarn publish"
   },
   "lint-staged": {
