--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uom",
-  "version": "1.1.2",
+  "version": "2.0.0-alpha.2",
   "main": "lib-cjs/index.js",
   "module": "lib-esm/index.js",
   "types": "lib-cjs/index",
