--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "precommit": "lint-staged",
     "coverage": "rimraf coverage .nyc_output && nyc yarn test",
     "report-coverage": "codecov -f coverage/*.json",
-    "gen-docs": "jsdoc2md --partial docs/scope.hbs --files lib-esm/amount.js lib-esm/unit.js >docs/api.md",
+    "gen-docs": "yarn run build:esm && jsdoc2md --partial docs/scope.hbs --files lib-esm/serialize.js lib-esm/amount.js lib-esm/unit.js > docs/api.md",
     "publish-npm": "yarn test && yarn build && yarn publish"
   },
   "lint-staged": {
