--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
   "repository": "https://github.com/dividab/uom",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.3.0",
-    "@types/tape": "^4.2.32",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.11",
     "codecov": "^3.1.0",
     "husky": "^0.14.3",
+    "jest": "^24.9.0",
     "jsdoc-to-markdown": "^4.0.1",
     "lint-staged": "^7.2.0",
-    "nyc": "^12.0.2",
     "prettier": "^1.13.5",
     "rimraf": "^2.6.2",
     "tap-spec": "^5.0.0",
-    "tape": "^4.9.1",
-    "ts-node": "^6.1.1",
+    "ts-jest": "^24.1.0",
     "tslint": "^5.10.0",
     "tslint-immutable": "^4.6.0",
-    "typescript": "^2.9.1"
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "lint": "tslint -p src --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
@@ -31,10 +30,12 @@
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc -p src",
     "build:esm": "tsc -p src --module es2015 --moduleResolution node --outDir ./lib-esm",
-    "test": "tape --require ts-node/register \"test/**/*.ts\" | tap-spec",
+    "test2": "tape --require ts-node/register \"test/**/*.ts\" | tap-spec",
     "testjs": "yarn test:build && tape \"lib-test/**/*.js\"",
     "test:build": "tsc -p test",
     "test:build:clean": "rm -rf test/lib",
+    "test-coverage": "jest",
+    "test": "jest --no-coverage",
     "verify": "yarn lint && yarn build && yarn coverage",
     "precommit": "lint-staged",
     "coverage": "rimraf coverage .nyc_output && nyc yarn test",
