--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "codecov": "^3.1.0",
     "husky": "^0.14.3",
     "jest": "^24.9.0",
-    "jsdoc-to-markdown": "^4.0.1",
+    "jsdoc-to-markdown": "^5.0.1",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
     "rimraf": "^2.6.2",
-    "tap-spec": "^5.0.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.10.0",
     "tslint-immutable": "^4.6.0",
@@ -30,13 +29,12 @@
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc -p src",
     "build:esm": "tsc -p src --module es2015 --moduleResolution node --outDir ./lib-esm",
-    "test2": "tape --require ts-node/register \"test/**/*.ts\" | tap-spec",
     "testjs": "yarn test:build && tape \"lib-test/**/*.js\"",
     "test:build": "tsc -p test",
     "test:build:clean": "rm -rf test/lib",
     "test-coverage": "jest",
     "test": "jest --no-coverage",
-    "verify": "yarn lint && yarn build && yarn coverage",
+    "verify": "yarn lint && yarn build && yarn test-coverage",
     "precommit": "lint-staged",
     "coverage": "rimraf coverage .nyc_output && nyc yarn test",
     "report-coverage": "codecov -f coverage/*.json",
