--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.11",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "codecov": "^3.1.0",
+    "confusing-browser-globals": "^1.0.9",
+    "eslint": "^6.6.0",
+    "eslint-config-divid": "^0.4.2",
+    "eslint-plugin-functional": "^1.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "husky": "^0.14.3",
     "jest": "^24.9.0",
     "jsdoc-to-markdown": "^5.0.1",
@@ -24,7 +31,8 @@
     "typescript": "^3.6.3"
   },
   "scripts": {
-    "lint": "tslint -p src --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
+    "lint2": "tslint -p src --config ./tslint.json -- './{src,test}/**/*.ts{,x}'",
+    "lint": "eslint './{src,tests}/**/*.ts' --ext .ts -f visualstudio ",
     "build": "yarn build:clean && yarn build:cjs && yarn build:esm && yarn gen-docs",
     "build:clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc -p src",
