Refactor tests to __tests__ dir

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-config-divid": "^0.4.2",
     "eslint-plugin-functional": "^1.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "husky": "^0.14.3",
+    "husky": "^4.3.0",
     "jest": "^24.9.0",
     "jsdoc-to-markdown": "^5.0.1",
     "lint-staged": "^7.2.0",
@@ -39,20 +39,18 @@
   },
   "scripts": {
     "lint": "eslint './{src,test}/**/*.ts' --ext .ts -f visualstudio ",
-    "build": "yarn build:clean && yarn build:cjs && yarn build:esm && yarn gen-docs",
-    "build:clean": "rm -rf ./lib-cjs ./lib-esm",
+    "build": "yarn clean && yarn build:cjs && yarn build:esm && yarn gen-docs",
+    "clean": "rm -rf ./lib-cjs ./lib-esm",
     "build:cjs": "tsc -p src",
     "build:esm": "tsc -p src --module es2015 --moduleResolution node --outDir ./lib-esm",
-    "test:build": "tsc -p test",
-    "test:build:clean": "rm -rf ./lib-test",
-    "test-coverage": "jest",
     "test": "jest --no-coverage",
     "verify": "yarn lint && yarn build && yarn test-coverage",
-    "precommit": "lint-staged",
+    "test-coverage": "jest",
     "report-coverage": "codecov -f coverage/lcov.info",
     "gen-docs": "jsdoc2md --partial docs/scope.hbs --files lib-esm/serialize.js lib-esm/format.js lib-esm/amount.js lib-esm/unit.js > docs/api.md",
     "preversion": "git checkout master && git pull && yarn test && yarn build",
-    "postversion": "git push --tags && yarn publish --new-version $npm_package_version && git push --follow-tags && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "git push --tags && yarn publish --new-version $npm_package_version && git push --follow-tags && echo \"Successfully released version $npm_package_version!\"",
+    "precommit": "lint-staged"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --ext .ts -f visualstudio",
