--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uom",
-  "version": "5.0.0",
+  "version": "6.0.0-0",
   "main": "lib-cjs/index.js",
   "module": "lib-esm/index.js",
   "types": "lib-cjs/index",
